apps/base/phpmyadmin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phpmyadmin
  labels:
    app.kubernetes.io/component: database
