apps/base/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
  labels:
    app.kubernetes.io/name: phpmyadmin
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: phpmyadmin
