apps/base/phpmyadmin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
  labels:
    app.kubernetes.io/name: phpmyadmin
  annotations:
    gethomepage.dev/description: phpmyadmin
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: phpmyadmin.png
    gethomepage.dev/name: phpMyAdmin
    gethomepage.dev/statusStyle: dot
spec:
  parentRefs:
    - name: gateway
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: phpmyadmin
          port: 80
